Adding topics and nesting posts but having trouble with seeds.rb

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -11,7 +11,7 @@
 		</ul>
 	</div>
 	<div class="span6">
-		<%= form_for @post do |f| %>
+		<%= form_for [@topic, @post] do |f| %>
 			<div class="control-group">
 				<%= f.label :title %>
 				<div class="controls">
