--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -11,7 +11,11 @@
       <div class="media">
         <div class="media-body">
           <h4 class="media-heading">
-            <%= link_to post.title, post %>
+            <%= link_to post.title, [@topic, post] %>
+            <small>
+            submitted <%= time_ago_in_words(post.created_at) %> ago by <%= post.user.name %><br/>
+            <%= post.comments.count %> Comments
+          </small>
           </h4>
         </div>
       </div>
