--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -8,6 +8,6 @@
 		</ul>
 	</div>
 	<div class="span8">
-		<%= render partial: 'form', locals: { @topic, post: @post } %>
+		<%= render partial: 'form', locals: { topic: @topic, post: @post } %>
 	</div>
 </div>
