--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,15 +1,15 @@
-<%= form_for [comment], html: { class: 'form-horizontal' } do |f| %>
-  <% if comment.errors.any? %>
+<%= form_for [@topic, @post, @comment], html: { class: 'form-horizontal' } do |f| %>
+  <% if @comment.errors.any? %>
     <div class="alert alert-block">
-      <h4>There are <%= pluralize(comment.errors.count, "error") %>.</h4>
+      <h4>There are <%= pluralize(@comment.errors.count, "error") %> errors.</h4>
       <ul>
-        <% comment.errors.full_messages.each do |msg| %>
+        <% @comment.errors.full_messages.each do |msg| %>
           <li><%= msg %></li>
         <% end %>
       </ul>
     </div>
   <% end %>
-  <%= control_group_tag(comment.errors[:body]) do %>
+  <%= control_group_tag(@comment.errors[:body]) do %>
     <%= f.label :body, class: 'control-label' %>
     <div class="controls">
       <%= f.text_area :body, rows: 8 %>
