--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= markdown @post.title %></h1>
+<!--<h1><%= markdown @post.title %></h1>-->
 
 <div class="row">
   <div class="span8">
@@ -10,7 +10,13 @@
     <p><%= markdown @post.body %></p>
     <p><%= image_tag(@post.image_url) if @post.image? %></p>
   </div>
-    <%= content_for?(:comments) ? yield(:comments) : yield %>
+  <h4><%= @post.comments.count %> Comments</h4>
+  <%= render @post.comments.reverse %>  
+  <hr/>
+  <%# if can? :create, Comment %>
+  <h4>New Comment</h4>
+  <%= render partial: "comments/form", locals: {topic: @topic, post: @post, comment: @comment } %>
+  <%# end %>
   <div class="span4">
     <% if can? :edit, @post %>
       <%= link_to "Edit", edit_topic_post_path(@topic,@post), class: 'btn btn-large btn-block' %>
