--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,7 +11,7 @@
     <p><%= image_tag(@post.image_url) if @post.image? %></p>
   </div>
   <h4><%= @post.comments.count %> Comments</h4>
-  <%= render @post.comments.reverse %>  
+  <%= render @post.comments.reverse %>
   <hr/>
   <%# if can? :create, Comment %>
   <h4>New Comment</h4>
@@ -20,6 +20,9 @@
   <div class="span4">
     <% if can? :edit, @post %>
       <%= link_to "Edit", edit_topic_post_path(@topic,@post), class: 'btn btn-large btn-block' %>
+    <% end %>
+    <% if can? :destroy, @post %>
+      <%= link_to "Delete Post", [@topic, @post], method: :delete, class: 'btn btn-large btn-block btn-danger', confirm: 'Are you sure you want to delete this post?' %>
     <% end %>
   </div>
 </div>
