--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Bloccit</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
+  <%= stylesheet_link_tag "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
@@ -13,6 +13,7 @@
 			<li><%= link_to "About", about_path %></li>
       <li><%= link_to "Topics", topics_path %></li>
       <li><%= link_to "Popular", posts_path %></li>
+      <li><%= link_to "Users", users_path %></li>
 			<div class="pull-right user-info">
         		<% if current_user %>
         		<%= image_tag(current_user.avatar.tiny.url) if current_user.avatar? %>
