Ajaxified comment creation

--- a/app/views/topics/posts/show.html.erb
+++ b/app/views/topics/posts/show.html.erb
@@ -10,8 +10,14 @@
     <p><%= markdown @post.body %></p>
     <p><%= image_tag(@post.image_url) if @post.image? %></p>
   </div>
-  <h4 class='js-comments-count'><%= @post.comments.count %> Comments</h4>
-  <%= render partial: 'comments/comment', collection: @comments, locals: { topic: @topic, post: @post } %>
+<!--   <h4 class='js-comments-count'><%= @post.comments.count %> Comments</h4>
+    <div class="js-comments">
+      <%= render partial: 'comments/comment', collection: @comments, locals: { topic: @topic, post: @post } %>
+    </div> -->
+  <h2 class='js-comments-count'><%= @comments.count %> Comments</h2>
+  <div class="js-comments">  
+    <%= render partial: 'comments/comment', collection: @comments %>
+  </div>
   <hr/>
   <% if can? :create, Comment %>
     <hr />
